// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`style rendering renders corrects 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  padding-left: calc(0.5rem / 2);
  padding-right: calc(0.5rem / 2);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width: 30rem) {
  .c0 {
    padding-left: calc(0.5rem / 2);
    padding-right: calc(0.5rem / 2);
  }
}

@media (min-width: 48rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

@media (min-width: 60rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

<Col
  alignSelf="auto"
  display="block"
  elementType="div"
  flex="0 0 auto"
  order={0}
  sibling=""
>
  <Component
    alignSelf="auto"
    className="c0"
    display="block"
    elementType="div"
    flex="0 0 auto"
    order={0}
    sibling=""
  >
    <div
      className="c0"
    />
  </Component>
</Col>
`;

exports[`style rendering should render display to flex 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: calc(0.5rem / 2);
  padding-right: calc(0.5rem / 2);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 16.666666666666664%;
  -ms-flex-basis: 16.666666666666664%;
  flex-basis: 16.666666666666664%;
  max-width: 16.666666666666664%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width: 30rem) {
  .c0 {
    padding-left: calc(0.5rem / 2);
    padding-right: calc(0.5rem / 2);
  }
}

@media (min-width: 48rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

@media (min-width: 60rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

<div
  className="c0"
/>
`;

exports[`style rendering should render propper display none on xs and flex on sm 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: calc(0.5rem / 2);
  padding-right: calc(0.5rem / 2);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: none;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width: 30rem) {
  .c0 {
    padding-left: calc(0.5rem / 2);
    padding-right: calc(0.5rem / 2);
    -webkit-flex-basis: 8.333333333333332%;
    -ms-flex-basis: 8.333333333333332%;
    flex-basis: 8.333333333333332%;
    max-width: 8.333333333333332%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width: 48rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

@media (min-width: 60rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

<div
  className="c0"
/>
`;

exports[`style rendering should render propper display none on xs, block on sm and flex on md 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: calc(0.5rem / 2);
  padding-right: calc(0.5rem / 2);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: none;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width: 30rem) {
  .c0 {
    padding-left: calc(0.5rem / 2);
    padding-right: calc(0.5rem / 2);
    -webkit-flex-basis: 8.333333333333332%;
    -ms-flex-basis: 8.333333333333332%;
    flex-basis: 8.333333333333332%;
    max-width: 8.333333333333332%;
    display: block;
  }
}

@media (min-width: 48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

@media (min-width: 60rem) {
  .c0 {
    padding-left: calc(1rem / 2);
    padding-right: calc(1rem / 2);
  }
}

<div
  className="c0"
/>
`;
